--- a/app/src/main/res/layout/activity_detailed_product.xml
+++ b/app/src/main/res/layout/activity_detailed_product.xml
@@ -29,7 +29,6 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="6dp"
-                    app:tint="@color/black"
                     android:src="@drawable/ic_left_arrow"/>
             </androidx.cardview.widget.CardView>
 
@@ -42,6 +41,7 @@
                 android:ellipsize="end"
                 tools:text="iPhone 12 pro max"
                 android:gravity="center"
+                android:textColor="@color/colorAccent"
                 android:textSize="18sp"
                 android:textStyle="bold"/>
 
@@ -58,8 +58,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:padding="6dp"
-                    android:src="@drawable/ic_free_star"
-                    app:tint="@color/black" />
+                    android:src="@drawable/ic_free_star"/>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
@@ -82,9 +81,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:textColor="@color/black"
+                    android:textColor="@color/colorAccent"
                     android:textSize="20sp"
-                    android:text="Description"
                     tools:text="iPhone 12 pro max "
                     android:layout_marginTop="10dp"/>
                 <TextView
@@ -111,7 +109,7 @@
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
                 android:textSize="24sp"
-                android:textColor="@color/black"
+                android:textColor="@color/colorAccent"
                 android:paddingStart="4dp"
                 android:layout_margin="10dp"
                 tools:text="12 000"
@@ -119,7 +117,7 @@
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/add_to_car_button"
                 android:layout_width="140dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
                 app:cornerRadius="18dp"
                 android:shadowDy="10"
                 android:text="@string/add_to_cart"
