--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -3,32 +3,34 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:background="#fff">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="14dp"
+    android:padding="14dp"
+    android:background="@color/gray">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/product_cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/product_cardView"
-        app:cardCornerRadius="14dp"
-        app:cardElevation="4dp"
-        app:cardBackgroundColor="@color/gray"
         android:layout_margin="6dp"
-        android:padding="4dp">
+        android:padding="4dp"
+        app:cardBackgroundColor="#fff"
+        app:cardCornerRadius="14dp"
+        app:cardElevation="0dp">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="14dp"
                 android:layout_marginStart="4dp"
+                app:cardCornerRadius="14dp"
                 app:cardElevation="0dp">
 
                 <ImageView
@@ -41,31 +43,34 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="vertical">
+
                 <TextView
                     android:id="@+id/item_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
                     android:padding="2dp"
-                    android:text="iPhone 12 pro max" />
+                    android:textColor="@color/colorAccent"
+                    tools:text="iPhone 12 pro max"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/item_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_marginTop="4dp"
                     android:layout_marginStart="10dp"
+                    android:layout_marginTop="4dp"
+                    android:textColor="@color/colorAccent"
                     android:layout_marginBottom="10dp"
-                    android:text="$1100"/>
+                    tools:text="$1100"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -73,25 +78,28 @@
                     android:layout_margin="10dp"
                     android:gravity="center"
                     android:orientation="horizontal">
+
                     <ImageView
                         android:id="@+id/minus_icon"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:clickable="true"
-                        android:src="@drawable/ic_minus"/>
+                        android:src="@drawable/ic_minus" />
+
                     <TextView
                         android:id="@+id/item_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp"
                         android:layout_marginLeft="6dp"
-                        android:layout_marginRight="6dp"/>
+                        android:layout_marginRight="6dp"
+                        android:textSize="16sp" />
+
                     <ImageView
                         android:id="@+id/plus_icon"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:clickable="true"
-                        android:src="@drawable/ic_plus"/>
+                        android:src="@drawable/ic_plus" />
                 </LinearLayout>
             </LinearLayout>
 
@@ -99,8 +107,8 @@
                 android:id="@+id/delete_button"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_baseline_delete_24"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:src="@drawable/ic_baseline_delete_24" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
