--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
     tools:context=".screen.home.HomeFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -20,26 +21,26 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    app:cardCornerRadius="16dp"
-                    android:layoutAnimation="@anim/layout_animation"
-                    app:cardBackgroundColor="@android:color/white"
-                    android:elevation="4dp">
-                    <com.synnapps.carouselview.CarouselView
-                        android:id="@+id/carouselView"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:layoutAnimation="@anim/layout_animation"
-                        app:fillColor="#FFFFFFFF"
-                        app:pageColor="#00000000"
-                        app:radius="6dp"
-                        app:slideInterval="3000"
-                        app:strokeColor="#BDBDBD"
-                        app:strokeWidth="1dp"/>
-                </androidx.cardview.widget.CardView>
+<!--                <androidx.cardview.widget.CardView-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_margin="16dp"-->
+<!--                    app:cardCornerRadius="16dp"-->
+<!--                    android:layoutAnimation="@anim/layout_animation"-->
+<!--                    app:cardBackgroundColor="@android:color/white"-->
+<!--                    android:elevation="4dp">-->
+<!--                    <com.synnapps.carouselview.CarouselView-->
+<!--                        android:id="@+id/carouselView"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="200dp"-->
+<!--                        android:layoutAnimation="@anim/layout_animation"-->
+<!--                        app:fillColor="#FFFFFFFF"-->
+<!--                        app:pageColor="#00000000"-->
+<!--                        app:radius="6dp"-->
+<!--                        app:slideInterval="3000"-->
+<!--                        app:strokeColor="#BDBDBD"-->
+<!--                        app:strokeWidth="1dp"/>-->
+<!--                </androidx.cardview.widget.CardView>-->
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
