--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -3,34 +3,34 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:background="#fff">
+    android:layout_width="200dp"
+    android:layout_height="wrap_content"
+    android:background="@color/gray">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/product_cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/product_cardView"
-        app:cardCornerRadius="18dp"
-        app:cardElevation="8dp"
+        android:layout_margin="14dp"
+        android:padding="4dp"
+        app:cardElevation="0dp"
         app:cardBackgroundColor="#fff"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="16dp"
-        android:padding="4dp">
+        app:cardCornerRadius="18dp">
 
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="14dp"
+            android:gravity="center_horizontal">
+
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="14dp"
                 android:layout_marginStart="4dp"
+                app:cardCornerRadius="14dp"
                 app:cardElevation="0dp">
 
                 <ImageView
@@ -41,48 +41,51 @@
 
             </androidx.cardview.widget.CardView>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/product_title"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="6dp"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:gravity="center"
+                android:padding="2dp"
+                android:textSize="14sp"
+                android:textColor="@color/colorAccent"
+                tools:text="iPhone 12 pro max" />
+
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="10dp"-->
+<!--                tools:text="Cheapest" />-->
+
+            <TextView
+                android:id="@+id/product_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/product_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="6dp"
-                    android:padding="2dp"
-                    android:text="iPhone 12 pro max" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:text="Cheapest"/>
-                <RatingBar
-                    android:id="@+id/ratingBar"
-                    style="@style/Widget.AppCompat.RatingBar.Small"
-                    android:layout_width="120dp"
-                    android:layout_height="20dp"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="6dp"
-                    android:layout_marginBottom="4dp"
-                    android:numStars="5"
-                    android:rating="4"/>
+                android:layout_marginStart="10dp"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/colorAccent"
+                tools:text="$1100" />
 
-                <TextView
-                    android:id="@+id/product_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_marginStart="10dp"
-                    android:text="$1100"/>
+            <RatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:max="5"
+                android:numStars="5"
+                android:rating="3"
+                android:progressTint="#FFC107"
+                style="@style/Widget.AppCompat.RatingBar.Small" />
 
-            </LinearLayout>
+
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 </FrameLayout>
